# bilibili-live-helper

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.example.yaml  config.yaml  flake.nix  pyproject.toml  users.example.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: ci.yml
bilibili_live_helper/: __init__.py  __main__.py  bilibili.py  config.py  healthcheck.py  models.py  notify.py  runner.py  state.py
fans_medal_helper/: __main__.py  bilibili.py  client.py  config.py  models.py  notify.py  runner.py
src/: api.py
tests/: test_bilibili.py  test_config.py  test_healthcheck.py  test_notify.py  test_runner.py  test_state.py
