[project]
name = "fans-medal-helper"
version = "1.0.0"
description = "Personal Bilibili live-stream medal task runner."
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "curl-cffi>=0.15.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.1",
]
