[project]
name = "bilibili-live-helper"
version = "2.0.0"
description = "Single-account Bilibili live-stream task runner."
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "curl-cffi>=0.15.0",
    "pyyaml>=6.0.3",
    "tzdata>=2025.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.1",
]
