[project]
name = "bilibili-live-helper"
version = "2.0.0"
description = "Single-account Bilibili live-stream task runner."
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "curl-cffi>=0.15.0",
    "pyyaml>=6.0.3",
    "tzdata>=2025.2",
]

[project.scripts]
bilibili-live-helper = "bilibili_live_helper.__main__:main"
bilibili-live-helper-check-config = "bilibili_live_helper.config:main"
bilibili-live-helper-healthcheck = "bilibili_live_helper.healthcheck:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.1",
]
